<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


    <FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.NoteListFragment"
    android:layout_margin="@dimen/margin_8dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_note"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_note_value"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:maxLines="1"
            android:padding="@dimen/pad_8"
            android:gravity="center_vertical"
            android:inputType="textCapSentences"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789 "
            android:textColorHint="@color/edittext_border"
            android:hint="@string/searchNotesHere"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size_medium"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_note"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/til_note"

        />

    <RelativeLayout
        android:id="@+id/filter_layout_view"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_alignParentBottom="true"
        android:visibility="gone"
        android:background="@color/colorNavyBlue">

    <View
        android:id="@+id/view_vertical"
        android:layout_width="1dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginBottom="@dimen/margin_8dp"
        android:layout_height="?attr/actionBarSize"
        android:layout_centerHorizontal="true"
        android:background="@color/colorWhite" />

    <TextView
        android:id="@+id/tv_sort_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sortBy"
        android:layout_centerVertical="true"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size_medium"
        android:textStyle="bold"
        android:drawableStart="@drawable/ic_sort"
        android:drawablePadding="@dimen/margin_8dp"
        android:layout_marginStart="@dimen/margin30dp" />

    <TextView
        android:id="@+id/tv_filter_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filterBy"
        android:layout_centerVertical="true"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size_medium"
        android:textStyle="bold"
        android:drawablePadding="@dimen/margin_8dp"
        android:layout_alignParentEnd="true"
        android:drawableStart="@drawable/ic_filter"
        android:layout_marginEnd="@dimen/margin30dp" />
    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:fabSize="normal"
        app:backgroundTint="@color/colorGrey"
        app:srcCompat="@drawable/ic_add_white_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/filter_layout_view"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <include layout="@layout/sort_by_view_bottom_sheet"/>

        <include layout="@layout/filter_by_view_bottom_sheet"/>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>